Compiler/tests/typing/bad/testfile-redef-3.rs

struct S { a: i32 }
struct S { a: i32 }
fn main() { }
